<resources>
    <string name="app_name">ITMO.Maps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ITMO.Maps</string>
    <string name="nav_header_subtitle">Enjoy app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_route">Show routes</string>
    <string name="button_swap">Swap locations</string>
    <string name="from">Location</string>
    <string name="to">Destination</string>
    <string name="leave_comment">Leave comment</string>
    <string name="from_here">From here</string>
    <string name="to_here">To here</string>
    <string name="comment_title_hint">Comment title</string>
    <string name="comment_field">Leave your comment here</string>
    <string name="comment_button">Post comment</string>
    <string name="view_comments">View comments</string>
    <string name="author">Author</string>
    <string name="comment_type">Comment type</string>
    <string name="add_map_comment">Add comment</string>
</resources>
